# SimCLR-HardPseudoLabeling

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: mvtec_bottle_inspection.yaml  pseudo_label_mnist.yaml  simclr_mnist.yaml  transfer_pseudo_label_mnist.yaml
docs/: portfolio_roadmap.md
src/simclr_hpl/: __init__.py  business.py  config.py  data.py  models.py  training.py  utils.py  visualization.py
src/simclr_hpl/cli/: mvtec_inspection.py  plot_results.py  pseudo_labeling.py  simclr.py  transfer_benchmark.py
tests/: test_models.py
